examples/test/testpolicy5074.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5074
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key44: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value31
      podSelector:
        matchLabels:
          key21: value40
          key42: value22
          key6: value8
